several SEO improvements

--- a/_config.yml
+++ b/_config.yml
@@ -312,6 +312,7 @@ plugins:
   - jekyll-paginate
   - jekyll-sitemap
   - jekyll-redirect-from
+  - jekyll-seo-tag
   - jemoji
 
 # Mimic GitHub Pages with --safe
@@ -321,6 +322,7 @@ whitelist:
   - jekyll-paginate
   - jekyll-sitemap
   - jekyll-redirect-from
+  - jekyll-seo-tag
   - jemoji
 
 
